overlays/prod/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pega-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: pega.local
      http:
        paths:
          - path: /prweb
            pathType: Prefix
            backend:
              service:
                name: pega-web
                port:
                  number: 80
